done next block, timeline

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,36 @@
             <button class="btn">read more</button>
         </div>
     </header>
+    <div class="timeline">
+        <div class="timeline__vertical-line"></div>
+        <div class="timeline__content">
+            <div class="content__wraper">
+                <figure class="timeline__content__circle"></figure>
+                <h2>2011</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id qui voluptates earum voluptatibus
+                    distinctio cupiditate praesentium, unde accusamus eligendi saepe quo nostrum repellat eveniet nemo?
+                    Deleniti, porro. Doloremque, quia quo?</p>
+            </div>
+        </div>
+        <div class="timeline__content">
+            <div class="content__wraper">
+                <figure class="timeline__content__circle"></figure>
+                <h2>2012</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id qui voluptates earum voluptatibus
+                    distinctio cupiditate praesentium, unde accusamus eligendi saepe quo nostrum repellat eveniet nemo?
+                    Deleniti, porro. Doloremque, quia quo?</p>
+            </div>
+        </div>
+        <div class="timeline__content">
+            <div class="content__wraper">
+                <figure class="timeline__content__circle"></figure>
+                <h2>2013</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id qui voluptates earum voluptatibus
+                    distinctio cupiditate praesentium, unde accusamus eligendi saepe quo nostrum repellat eveniet nemo?
+                    Deleniti, porro. Doloremque, quia quo?</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
