--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,65 @@
         <img src="./img/city.png" alt="city" class='timeline__city'>
     </div>
     <!-- /timeline -->
+    <div class="team">
+        <div class="block-header">
+            <h2 class="block-header__title">This is our team</h2>
+            <h4 class="block-header__subtitle">We are small but effective and ...</h4>
+        </div>
+        <div class="people">
+            <div class="person">
+                <img src="./img/face-3.png" alt="Justin Twice" class="person__face">
+                <div class="person__name">Mark Once</div>
+                <div class="person__prof">Designer & Front-End Developer</div>
+                <div class="person__social">
+                    <a href="#">
+                        <i class="fab fa-twitter person__social__icon"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-instagram person__social__icon"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="person">
+                <img src="./img/face-1.png" alt="Justin Twice" class="person__face">
+                <div class="person__name">Justin Twice</div>
+                <div class="person__prof">Founder & CEO</div>
+                <div class="person__social">
+                    <a href="#">
+                        <i class="fab fa-twitter person__social__icon"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-instagram person__social__icon"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="person">
+                <img src="./img/face-2.png" alt="Justin Twice" class="person__face">
+                <div class="person__name">Antonio Never</div>
+                <div class="person__prof">Someone & Somewhere</div>
+                <div class="person__social">
+                    <a href="#">
+                        <i class="fab fa-twitter person__social__icon"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-instagram person__social__icon"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- /people -->
+    </div>
+    <!-- /team -->
+    <div class="provide">
+        <div class="block-header">
+            <h2 class="block-header__title block-header__title--white">We provide you everything</h2>
+            <h4 class="block-header__subtitle">Maybe not everything, but we provide you some stuff.</h4>
+        </div>
+
+    </div>
+    <div class="contact-us">
+
+    </div>
 
 </body>
 
