done servisec block

--- a/src/index.html
+++ b/src/index.html
@@ -134,15 +134,66 @@
     </div>
     <!-- /team -->
     <div class="provide">
+
         <div class="block-header">
             <h2 class="block-header__title block-header__title--white">We provide you everything</h2>
             <h4 class="block-header__subtitle">Maybe not everything, but we provide you some stuff.</h4>
         </div>
 
-    </div>
-    <div class="contact-us">
+        <div class="services">
+            <div class="services__item">
+                <div class="services__item__circle">
+                    <i class="fas fa-chart-line services__item__circle__icon"></i>
+                </div>
+                <h2 class="services__item__title">Some Analytics</h2>
+                <p class="services__item__text ">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+
+            <div class="services__item">
+                <div class="services__item__circle">
+                    <i class="fas fa-heart services__item__circle__icon"></i>
+                </div>
+                <h2 class="services__item__title">We provide you love</h2>
+                <p class="services__item__text ">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+
+            <div class="services__item">
+                <div class="services__item__circle">
+                    <i class="fas fa-cloud-upload-alt services__item__circle__icon"></i>
+                </div>
+                <h2 class="services__item__title">And Some Cloud</h2>
+                <p class="services__item__text ">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <!-- /services -->
+
+        <div class="btn__block">
+            <button class="btn btn--white">VISIT OUR BLOG</button>
+        </div>
 
     </div>
+    <!-- /provide -->
+    <div class="contact">
+        <div class="block-header">
+            <h2 class="block-header__title">Contact Us</h2>
+            <h4 class="block-header__subtitle">We know what we need to do</h4>
+        </div>
+
+        <div class="contact__info">
+
+            <div class="contact__info__item">
+
+            </div>
+            <div class="contact__info__item">
+
+            </div>
+            <div class="contact__info__item">
+
+            </div>
+
+        </div>
+    </div>
+    <!-- /contact -->
 
 </body>
 
