--- a/src/index.html
+++ b/src/index.html
@@ -182,15 +182,32 @@
         <div class="contact__info">
 
             <div class="contact__info__item">
-
+                <i class="fas fa-phone-alt contact__info__item__icon"></i>
+                <p>555-22-33</p>
             </div>
             <div class="contact__info__item">
-
+                <i class="fas fa-map-marker-alt contact__info__item__icon"></i>
+                <p>Here is some address</p>
             </div>
             <div class="contact__info__item">
-
+                <i class="fas fa-envelope contact__info__item__icon"></i>
+                <p>somemail@hotmail.com</p>
             </div>
 
+        </div>
+        <!-- /contact__info -->
+        <div class="contact-form">
+            <form action="">
+                <input type="text" name='full-name' placeholder="Full Name" class="input">
+                <input type="text" name='email' placeholder="Email" class="input">
+                <input type="text" name='number' placeholder="Number" class="input">
+                <textarea name="massege" placeholder="Write your Message here..." class="textarea"></textarea>
+
+                <button class="btn btn--block">Submit</button>
+            </form>
+        </div>
+        <div class="copyright">
+            <p>Copyright © Kenan Hamidic. All rights reserved.</p>
         </div>
     </div>
     <!-- /contact -->
