added animation and scroll

--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,18 @@
 <body>
     <div class="nav">
         <ul class='main-nav'>
-            <li class='main-nav__item'><a href="#">Home</a></li>
-            <li class='main-nav__item main-nav__item--active'><a href="#">About</a></li>
-            <li class='main-nav__item'><a href="#">Team</a></li>
+            <li class='main-nav__item'><a href="#home">Home</a></li>
+            <li class='main-nav__item'><a href="#about">About</a></li>
+            <li class='main-nav__item'><a href="#team">Team</a></li>
             <li class='main-nav__item main-nav__item--logo'><img src="./img/logo.png" alt="Logo"></li>
-            <li class='main-nav__item'><a href="#">Services</a></li>
-            <li class='main-nav__item'><a href="#">Blog</a></li>
-            <li class='main-nav__item'><a href="#">Contact Us</a></li>
+            <li class='main-nav__item'><a href="#services">Services</a></li>
+            <li class='main-nav__item'><a href="#blog">Blog</a></li>
+            <li class='main-nav__item'><a href="#contact">Contact Us</a></li>
         </ul>
         </nav>
     </div>
     <!-- /nav -->
-    <header class='header'>
+    <header class='header' id="home">
         <div class="header__content">
             <h1 class='header__maintitle'>We build it with passion</h1>
             <p class='header__subtitle'>Just to be clear, we do this for fun not for you, just kidding.</p>
@@ -34,7 +34,7 @@
         </div>
     </header>
     <!-- /header -->
-    <div class="timeline">
+    <div class="timeline" id="about">
         <div class="timeline__vertical-line"></div>
         <div class="timeline__content">
             <div class="content__wraper">
@@ -84,7 +84,7 @@
         <img src="./img/city.png" alt="city" class='timeline__city'>
     </div>
     <!-- /timeline -->
-    <div class="team">
+    <div class="team" id="team">
         <div class="block-header">
             <h2 class="block-header__title">This is our team</h2>
             <h4 class="block-header__subtitle">We are small but effective and ...</h4>
@@ -133,7 +133,7 @@
         <!-- /people -->
     </div>
     <!-- /team -->
-    <div class="provide">
+    <div class="provide" id="services">
 
         <div class="block-header">
             <h2 class="block-header__title block-header__title--white">We provide you everything</h2>
@@ -167,13 +167,13 @@
         </div>
         <!-- /services -->
 
-        <div class="btn__block">
+        <div class="btn__block" id="blog">
             <button class="btn btn--white">VISIT OUR BLOG</button>
         </div>
 
     </div>
     <!-- /provide -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="block-header">
             <h2 class="block-header__title">Contact Us</h2>
             <h4 class="block-header__subtitle">We know what we need to do</h4>
